Fixing alert width to handle long strings, to fix to wrap lines later.

--- a/src/components/gui/gui.css
+++ b/src/components/gui/gui.css
@@ -303,7 +303,7 @@ $fade-out-distance: 15px;
 /* Alerts */
 
 .alerts-container {
-    width: 500px;
+    width: 520px;
     z-index: $z-index-alerts;
     left: 0;
     right: 0;
